# ML_OPS

./: .dockerignore  .dvcignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MLOps_Final_Project.pptx  PRESENTATION.md  README.md  TASKS.md  docker-compose.yml  dvc.yaml  lessons_learned.md  mlflow_incompatible_old.db  params.yaml  powermetrics_log.txt  process_log.md  pyproject.toml  requirements.txt  run_all.sh  serve_demo.sh
.github/workflows/: ci.yml  drift.yml  publish.yml
app/: dashboard.py  inference_api.py  serve_index.html
data/: .gitignore
data/feature_store/v1/: feature_defs.json  test.parquet  train.parquet
data/feature_store/v2/: feature_defs.json  test.parquet  train.parquet
data/marts/: student_serving.parquet  student_training.parquet
data/staging/: stg_students.parquet
reports/: .gitignore
reports/automl/: benchmark.json
reports/experiments/: feature_grid.json
reports/lineage/: lineage_dag.md
scripts/: ci_pipeline.sh  smoke_apps.sh  verify_docker.sh
src/: automl_benchmark.py  batch_inference.py  config.py  eda.py  evaluate.py  experiment.py  feature_store.py  make_modified_test.py  mlflow_utils.py  monitoring.py  monitoring_evidently.py  preprocessing.py  train_automl.py
src/lineage/: contracts.py  int_features.py  lineage_diagram.py  mart_training.py  run_lineage.py  stg_students.py
tests/: test_mlops_pillars.py  test_pipeline.py
